--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery-smooth-scroll": "^2.0.0",
     "lazysizes": "^3.0.0-rc2",
     "normalize.css": "^5.0.0",
+    "picturefill": "^3.0.2",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg2png": "^0.3.0",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^0.2.1",
     "postcss-import": "^8.2.0",
